--- a/views/layout/userDialog.ejs
+++ b/views/layout/userDialog.ejs
@@ -3,7 +3,11 @@
     <input class='input-txt' type='text' id='name-user' value=''/>
     <label class='label-txt' for='login-user'>Логин:</label>
     <input class='input-txt' type='text' id='login-user' value=''/>
-    <label class='label-txt' for='password-user'>Пароль:</label>
-    <input class='input-txt' type='password' id='password-user' value=''/>
+    <ul id="check-block-user">
+        <li>
+            <input id='mustPassword' type='checkbox'/>
+            <label for='mustPassword'>Сменить пароль при следующем запуске</label>
+        </li>
+    </ul>
     <button id="btn-role">Выберите роль</button>
 </div>
