--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -320,6 +320,7 @@
                 <button id="button-add-user">Добавить</button>
                 <button id="button-edit-user">Изменить</button>
                 <button id="button-del-user">Удалить</button>
+                <button id="button-password-user">Изменить пароль</button>
             </div>
         </div>
         <div id="cri-tabs-5">
@@ -405,6 +406,7 @@
 
 <% include ./layout/msgDialog.ejs %>
 <% include ./layout/userDialog.ejs %>
+<% include ./layout/passwordDialog.ejs %>
 <% include ./layout/subjDialog.ejs %>
 <% include ./layout/criDialog.ejs %>
 <% include ./layout/rmDialog.ejs %>
