--- a/views/home.ejs
+++ b/views/home.ejs
@@ -128,7 +128,6 @@
                 </div>
             </div>
         </div>
-        <div id="band"></div>
         <div id="chart">
             <div id="chart-tabs">
                 <ul>
@@ -137,7 +136,9 @@
                     <li><a href="#chart-tabs-3">Пред.задачи</a></li>
                 </ul>
                 <div id="chart-tabs-1">
-                    <canvas id="canvas-radar" height="400" width="400"></canvas>
+                    <div id="graphics">
+                        <canvas id="canvas-radar" height="400" width="400"></canvas>
+                    </div>
                 </div>
                 <div id="chart-tabs-2">
                     <div id="tbl-report" class="hle-grid">
