--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,5 +5,5 @@
 <% stylesheet('css/error.css') -%>
 
 <div id="dialog-permit" title="<%=blocks.titleDlg%>">
-    <h4 id="txt-message"><%=error.message%> <%=error.url%></h4>
+    <h4 id="txt-message"><%=error.message%></h4>
 </div>
