--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -36,6 +36,19 @@ h5 {
     font-weight: bold;
     line-height: 1.5;
 }
+h6 {
+    color: #4d4d4d;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 27px;
+    text-shadow:-1px -1px 1px rgba(255,255,255,0.2), /* наверх и влево */
+    1px 1px 1px rgba(255,255,255,0.2), /* вниз и вправо */
+    1px 1px 1px rgba(0,0,0,0.7); /* тёмная тень */
+    letter-spacing: 1px;
+    font-weight: normal;
+    font-style: normal;
+    padding-top: 10px;
+}
+
 select, option {
     color: #1c94c4;
     font-size: 16px;
@@ -56,3 +69,4 @@ input, textarea{
     -ms-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
+
