--- a/public/css/login.css
+++ b/public/css/login.css
@@ -66,18 +66,12 @@ table {
     border-radius: 4px;
     color: #646464;
     font-size: 12px;
-    height: 25px;
-    padding-top: 5px;
+    height: 28px;
     width: 258px;
+    padding-left: 3px;
 }
-
-#btn-panel {
-    width: 100%;
-    height: 40px;
-}
-
 #button-submit {
-    height: 25px;
+    height: 28px;
     width: 106px;
     margin-left: 10px;
 }
