--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
                 <h4 class="lft" id="value-quarter"></h4>
             </div>
             <div class="clr">
-                <h4 class="lft" id="name-object">Объект:</h4>
+                <h4 class="lft" id="name-object"></h4>
                 <h4 class="lft">&nbsp;</h4>
                 <h4 class="lft" id="value-object"><%= txtObject %></h4>
             </div>
@@ -39,8 +39,8 @@
             <button id="btn-setting">Настройка</button>
             <div id="radio-btn">
                 <div id="radio">
-                    <input type="radio" id="radio1" name="radio" checked="checked" /><label for="radio1">Объекты</label>
-                    <input type="radio" id="radio2" name="radio" /><label for="radio2">Субъекты</label>
+                    <input type="radio" id="radio1" name="radio" checked="checked" /><label for="radio1">Офис/Направление</label>
+                    <input type="radio" id="radio2" name="radio" /><label for="radio2">Руководитель/Сотрудник</label>
                 </div>
             </div>
         </div>
