--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -109,7 +109,7 @@
   border: none; }
 
 #tbl-sprav .tbl-head, #tbl-sprav .tbl-body, #tbl-sprav .tbl-footer {
-  width: 280px; }
+  width: 350px; }
 
 #tbl-sprav .tbl-body {
   height: 220px; }
@@ -166,22 +166,30 @@
   width: 100%;
   border-right: none; }
   #tbl-object .td-2 div {
-    width: 200px;
+    width: 300px;
     text-align: left; }
 #tbl-object th.td-2 {
   border-right: none; }
 
 #tbl-subject .td-1 div {
-  width: 40px;
+  width: 20px;
   text-align: center; }
 
-#tbl-subject .td-2 {
+#tbl-subject .td-2 div {
+  width: 240px;
+  text-align: left; }
+
+#tbl-subject .td-3 div {
+  width: 70px;
+  text-align: center; }
+
+#tbl-subject .td-4 {
   width: 100%;
   border-right: none; }
-  #tbl-subject .td-2 div {
-    width: 200px;
-    text-align: left; }
-#tbl-subject th.td-2 {
+  #tbl-subject .td-4 div {
+    width: 70px;
+    text-align: center; }
+#tbl-subject th.td-4 {
   border-right: none; }
 
 #tbl-cri-group-content .td-1 div {
@@ -284,7 +292,7 @@
   border-right: none; }
 
 #tbl-task .td-1 div {
-  width: 25px;
+  width: 20px;
   text-align: center; }
 
 #tbl-task .td-2 div {
@@ -423,6 +431,10 @@
       padding: 5px;
       font-weight: bold;
       border-right: 0.1em solid #cccccc; }
+
+.td-bold {
+  font-weight: bold;
+  color: #ff2222; }
 
 .hle-grid-highlight {
   background: #ffe45c; }
