--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -11,7 +11,7 @@
 
     <link href="bower_components/jquery-ui/themes/ui-lightness/jquery-ui.min.css" rel="stylesheet"/>
     <link href="iCheck/css/orange.css" rel="stylesheet"/>
-    <link href="iCheck/css/orange-line.css" rel="stylesheet"/>
+    <!--<link href="iCheck/css/flat.css" rel="stylesheet"/>-->
     <%-stylesheets%>
     <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="bower_components/jquery.cookie/jquery.cookie.js" type="text/javascript"></script>
