--- a/views/layout/roleDialogEdit.ejs
+++ b/views/layout/roleDialogEdit.ejs
@@ -24,6 +24,14 @@
                     <input id='perSettings-role' type='checkbox'/>
                     <label for='perSettings-role'>Настройка системы</label>
                 </li>
+                <li>
+                    <input id='allGroups-role' type='checkbox'/>
+                    <label for='allGroups-role'>Только все направления</label>
+                </li>
+                <li>
+                    <input id='allObjects-role' type='checkbox'/>
+                    <label for='allObjects-role'>Только все объекты</label>
+                </li>
             </ul>
         </div>
         <div class="tbl-band"></div>
