--- a/views/layout/userDialog.ejs
+++ b/views/layout/userDialog.ejs
@@ -10,12 +10,24 @@
         </li>
     </ul>
     <button id="btn-role">Выберите роль</button>
-    <label for="role-master">Select a role</label>
-    <select name="role-master" id="role-master">
-        <option>Slower</option>
-        <option>Slow</option>
-        <option selected="selected">Medium</option>
-        <option>Fast</option>
-        <option>Faster</option>
-    </select>
+    <div id="select-twise">
+        <div id="select-master">
+            <select id="role-master">
+                <option>Slower</option>
+                <option>Slow</option>
+                <option>Medium</option>
+                <option>Fast</option>
+                <option>Faster</option>
+            </select>
+        </div>
+        <div id="select-pupil">
+            <select id="role-pupil">
+                <option>Slower</option>
+                <option>Slow</option>
+                <option>Medium</option>
+                <option>Fast</option>
+                <option>Faster</option>
+            </select>
+        </div>
+    </div>
 </div>
