--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,11 @@
             <button id="button-groups">Направления</button>
             <button id="button-quarter-minus">Пред.период</button>
             <button id="button-quarter-plus">След.период</button>
-            <button id="btn-setting">Настройка</button>
+            <!--
+            <div id="select-subject">
+                <select id="subject-list"></select>
+            </div>
+            -->
             <div id="radio-btn">
                 <div id="radio">
                     <input type="radio" id="radio1" name="radio" checked="checked" /><label for="radio1">Офис/Направление</label>
@@ -211,6 +215,7 @@
     <div id="footer">
         <div id="footer-menu">
             <button id="button-logout">Выход</button>
+            <button id="btn-setting">Настройка</button>
             <h5 id="username"><%= username%></h5>
         </div>
     </div>
