--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -404,6 +404,7 @@
 <% include ./layout/passwordDialog.ejs %>
 <% include ./layout/subjDialog.ejs %>
 <% include ./layout/criDialog.ejs %>
+<% include ./layout/objDialog.ejs %>
 <% include ./layout/rmDialog.ejs %>
 <% include ./layout/roleDialog.ejs %>
 <% include ./layout/roleDialogEdit.ejs %>
