--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -1,14 +1,14 @@
 h1 {
     color: #4d4d4d;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 38px;
+    font-size: 26px;
     text-shadow:-1px -1px 1px rgba(255,255,255,0.2), /* наверх и влево */
                  1px 1px 1px rgba(255,255,255,0.2), /* вниз и вправо */
                  1px 1px 1px rgba(0,0,0,0.7); /* тёмная тень */
     letter-spacing: 1px;
     font-weight: normal;
     font-style: normal;
-    padding-top: 10px;
+    /*padding-top: 10px; */
 }
 h2 {
     color: #6eb9cc;
