--- a/views/layout/logo.ejs
+++ b/views/layout/logo.ejs
@@ -1,4 +1,15 @@
-<div id="logo-right">
+<div id="logo-right" style="width: 500px;">
     <img class="rgt" src="img/logo.png" width="107" height="65">
-    <h1 class="rgt" style="padding-top: 10px;">Рейтинговая система&nbsp;</h1>
+    <h1 class="rgt" style="padding-top: 1px;">Рейтинговая система&nbsp;</h1>
+        <div id="radio-role" class="tbl-block rgt" style="padding-top: 10px;">
+            <div class="tbl-block-cell">
+                <input type="radio" id="radio-master" checked/>
+                <label for="radio-master">&nbsp;Я оцениваю</label>
+            </div>
+            <div class="tbl-band"></div>
+            <div class="tbl-block-cell">
+                <input type="radio" id="radio-pupil"/>
+                <label for="radio-pupil">&nbsp;Меня оценивают&nbsp;</label>
+            </div>
+        </div>
 </div>
