--- a/views/layout/logo.ejs
+++ b/views/layout/logo.ejs
@@ -1,14 +1,14 @@
 <div id="logo-right" style="width: 500px;">
     <img class="rgt" src="img/logo.png" width="107" height="65">
-    <h1 class="rgt" style="padding-top: 1px;">Рейтинговая система&nbsp;</h1>
-        <div id="radio-role" class="tbl-block rgt" style="padding-top: 10px;">
+    <h1 class="rgt" style="padding-top: 1px; margin-right: 5px;">Рейтинговая система</h1>
+        <div id="radio-role" class="tbl-block rgt">
             <div class="tbl-block-cell">
-                <input type="radio" id="radio-master" checked/>
+                <input type="radio" id="radio-master" name="radio-m" checked/>
                 <label for="radio-master">&nbsp;Я оцениваю</label>
             </div>
             <div class="tbl-band"></div>
             <div class="tbl-block-cell">
-                <input type="radio" id="radio-pupil"/>
+                <input type="radio" id="radio-pupil" name="radio-m"/>
                 <label for="radio-pupil">&nbsp;Меня оценивают&nbsp;</label>
             </div>
         </div>
