--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <% layout('./layout/page') -%>
 <% block('title', '') -%>
 <% block('titleDlg', 'Доступ закрыт') -%>
-<% script('js/error.js') -%>
+<% script('js/error2.js') -%>
 <% stylesheet('css/error.css') -%>
 
 <div id="dialog-permit" title="<%=blocks.titleDlg%>">
