--- a/views/layout/logo.ejs
+++ b/views/layout/logo.ejs
@@ -4,12 +4,12 @@
         <div id="radio-role" class="tbl-block rgt">
             <div class="tbl-block-cell">
                 <input type="radio" id="radio-master" name="radio-m" checked/>
-                <label for="radio-master">&nbsp;Я оцениваю</label>
+                <label for="radio-master">Я оцениваю</label>
             </div>
             <div class="tbl-band"></div>
             <div class="tbl-block-cell">
                 <input type="radio" id="radio-pupil" name="radio-m"/>
-                <label for="radio-pupil">&nbsp;Меня оценивают&nbsp;</label>
+                <label for="radio-pupil">Меня оценивают</label>
             </div>
         </div>
 </div>
