--- a/public/css/grid.scss
+++ b/public/css/grid.scss
@@ -59,7 +59,8 @@ $grid-div-padding-left: 2px;
 @include table-body-height("#tbl-role-group", 200px, 250px);
 
 @include table-td("#tbl-object", false, 40px, center, 1, true);
-@include table-td("#tbl-object", true, 300px, left, 2, true);
+@include table-td("#tbl-object", false, 300px, left, 2, true);
+@include table-td("#tbl-object", true, 110px, left, 3, true);
 
 @include table-td("#tbl-subject", false, 20px, center, 1, true);
 @include table-td("#tbl-subject", false, 240px, left, 2, true);
