--- a/views/layout/objDialog.ejs
+++ b/views/layout/objDialog.ejs
@@ -1,4 +1,7 @@
 <div id="dialog-obj" title="">
     <label class='label-txt' for='name-obj'>Критерий:</label>
     <input class='input-txt' type='text' id='name-obj' value=''/>
+    <div id="select-period">
+        <select id="list-period"></select>
+    </div>
 </div>
