--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -25,6 +25,7 @@
             <li><a href="#cri-tabs-3">Объекты</a></li>
             <li><a href="#cri-tabs-4">Пользователи</a></li>
             <li><a href="#cri-tabs-5">Роли</a></li>
+            <li><a href="#cri-tabs-6">Периодичность</a></li>
         </ul>
         <div id="cri-tabs-1">
             <div id="tbl-cri" class="hle-grid">
@@ -362,6 +363,49 @@
                 <button id="button-del-role">Удалить</button>
             </div>
         </div>
+        <div id="cri-tabs-6">
+            <div id="tbl-period" class="hle-grid">
+                <div class="tbl-head  ui-corner-top">
+                    <table class="tbl">
+                        <thead>
+                        <tr>
+                            <th class="td-1"><div>#</div></th>
+                            <th class="td-2"><div>Наименование периодичности</div></th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
+                <div class="tbl-body">
+                    <table id="tbl-period-body" class="tbl">
+                        <tbody>
+                        <% var i=0; %>
+                        <% lstPeriod.forEach(function(val) { %>
+                        <% i++; %>
+                        <tr data-id="<%= val._id %>">
+                            <td class="td-1"><div><%= i %></div></td>
+                            <td class="td-2"><div><%= val.name %></div></td>
+                        </tr>
+                        <% }); %>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tbl-footer ui-corner-bottom ">
+                    <table class="tbl">
+                        <tfoot>
+                        <tr>
+                            <th class="td-1"><div><%= i %></div></th>
+                            <th class="td-2"><div></div></th>
+                        </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+            <div class="control-button">
+                <button id="button-add-period">Добавить</button>
+                <button id="button-edit-period">Изменить</button>
+                <button id="button-del-period">Удалить</button>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -380,10 +424,6 @@
         <div class="tbl-body">
             <table id="tbl-cri-list-body" class="tbl">
                 <tbody>
-                <!--<tr>
-                    <td class="td-1"><div></div></td>
-                    <td class="td-2"><div></div></td>
-                </tr> -->
                 </tbody>
             </table>
         </div>
