--- a/views/layout/userDialog.ejs
+++ b/views/layout/userDialog.ejs
@@ -12,7 +12,7 @@
     <button id="btn-role">Выберите роль</button>
     <div id="select-twise">
         <div id="select-master">
-            <select id="role-master">
+            <select id="list-role-master">
                 <option>Slower</option>
                 <option>Slow</option>
                 <option>Medium</option>
@@ -21,7 +21,7 @@
             </select>
         </div>
         <div id="select-pupil">
-            <select id="role-pupil">
+            <select id="list-role-pupil">
                 <option>Slower</option>
                 <option>Slow</option>
                 <option>Medium</option>
