--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -442,6 +442,7 @@
 
 <% include ./layout/msgDialog.ejs %>
 <% include ./layout/userDialog.ejs %>
+<% include ./layout/periodDialog.ejs %>
 <% include ./layout/passwordDialog.ejs %>
 <% include ./layout/subjDialog.ejs %>
 <% include ./layout/criDialog.ejs %>
